--- a/assets/sass/layout/_seccionContacto.scss
+++ b/assets/sass/layout/_seccionContacto.scss
@@ -1,4 +1,12 @@
 .seccionContacto{
     background-color: #e56353;
     padding: 70px 0;
+    font-weight: 700;
+    h1{
+        margin-bottom: 40px;
+    }
+    button{
+        font-size: 30px;
+        width: 30%;
+    }
 }
