--- a/assets/sass/layout/_seccion1.scss
+++ b/assets/sass/layout/_seccion1.scss
@@ -7,10 +7,13 @@
         width: 100%;
         height: auto;
     }
-    h2{
-        margin: 20px 0;
-    }
-    p{
-        margin: 20px 0;
+    .texto{
+        text-align: left;
+        h2{
+            margin: 20px 0;
+        }
+        p{
+            margin: 20px 0;
+        }
     }
 }
